Fix issue mobile layout issue of create_question modal

--- a/app/assets/stylesheets/create_question_form.scss
+++ b/app/assets/stylesheets/create_question_form.scss
@@ -39,7 +39,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 50%;
+  max-height: 100%;
 
   img {
     height: 35px;
@@ -59,6 +59,7 @@
   input {
     border: none;
     border-bottom: 1px solid #e2e2e2;
+    margin-top: 2em;
     margin-left: 33px;
     margin-right: 33px;
     height: 30px;
@@ -97,6 +98,7 @@
   }
 
   div.topic-modal {
+    margin: 2em 0;
   }
 
   div.question-form-topic-list {
